# android-rs-glue

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  android-apk-target.json
.circleci/: base.docker  config.yml
apk-builder/: Cargo.toml  glue_obj.rs  linker.rs
apk-builder/injected-glue/: Cargo.toml  ffi.rs  lib.rs
apk-builder/injected-glue/src/: ffi.rs
apk-builder/src/: build.rs  config.rs  install.rs  main.rs
cargo-android/: Cargo.toml
cargo-android/src/: main.rs  ndk.rs  sdk.rs
cargo-apk/: Cargo.toml  android_native_app_glue.c  android_native_app_glue.h  glue_obj.rs  linker.rs
cargo-apk/injected-glue/: ffi.rs  lib.rs  touch_event.rs
cargo-apk/native_app_glue/: android_native_app_glue.c  android_native_app_glue.h
cargo-apk/src/: build.rs  config.rs  install.rs  lib.rs  main.rs  old.rs  termcmd.rs
cargo-apk/src/ops/: build.rs  install.rs  mod.rs  run.rs
cargo-apk/tests/: cli.rs  run_tests.sh
cargo-apk/tests/cc/: Cargo.toml  build.rs
cargo-apk/tests/cc/cc_src/: cpptest.cpp  ctest.c
cargo-apk/tests/cc/src/: main.rs
cargo-apk/tests/cmake/: Cargo.toml  build.rs
cargo-apk/tests/cmake/libcmaketest/: CMakeLists.txt  cmaketest.c
cargo-apk/tests/cmake/src/: main.rs
cargo-apk/tests/inner_attributes/: Cargo.toml
cargo-apk/tests/inner_attributes/src/: main.rs
cargo-apk/tests/native-library/: Cargo.toml
cargo-apk/tests/native-library/src/: main.rs
examples/: Cargo.toml  basic.rs
examples/.cargo/: config
examples/advanced/: Cargo.toml
examples/advanced/assets/: test_asset
examples/advanced/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: basic.rs  main.rs
examples/multiple_targets/: Cargo.toml
examples/multiple_targets/examples/: example1.rs
examples/multiple_targets/src/: main.rs
examples/src/: basic.rs
examples/use_assets/: Cargo.toml
examples/use_assets/src/: fs.rs  main.rs
examples/use_icon/: Cargo.toml
examples/use_icon/src/: main.rs
glue/: Cargo.toml
glue/src/: event.rs  ffi.rs  glue.rs  jni.rs  lib.rs  looper.rs  queue.rs  touch_event.rs
src/: ffi.rs  lib.rs
