[package]
name = "cargo-apk"
version = "0.4.3"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
description = "Cargo subcommand that allows you to build Android packages"
repository = "https://github.com/rust-windowing/android-rs-glue/tree/master/cargo-apk"

[dependencies]
cargo = "0.32.0"
clap = "2.31"
failure = "0.1.2"
rustc-serialize = "0.3.19"
term = "0.4.4"
toml = "0.1.28"
