[package]

name = "android_glue"
version = "0.0.2"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
description = "Glue for the Android JNI"
repository = "https://github.com/tomaka/android-rs-glue"

[dependencies]
cgmath = "*"

[dependencies.schedule_recv]
git = "https://github.com/PeterReid/schedule_recv"
