[package]
name = "android_glue"
version = "0.2.3"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
description = "Glue for building Android NDK apps with cargo-apk"
repository = "https://github.com/rust-windowing/android-rs-glue"
edition = "2018"

[dependencies]
android-ndk-sys = { git = "https://github.com/rust-windowing/android-ndk-rs" }
