[package]
name = "android_glue_example"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]

[package.metadata.android]
label = "Basic android-rs-glue example"
build_targets = ["arm-linux-androideabi", "i686-linux-android"]

[[bin]]
name = "example"
path = "src/basic.rs"

[dependencies.android_glue]
path = "../../glue"
