[package]
name = "android_primary_bin"
version = "0.1.0"
authors = ["Philip Alldredge <philip@philipalldredge.com>"]
publish = false
edition = "2018"

[dependencies.android_glue]
path = "../../glue"

[package.metadata.android]
label = "Primary Binary"

[[package.metadata.android.bin]]
name = "secondary_bin"
label = "Secondary Binary"

[[package.metadata.android.example]]
name = "example1"
label = "Example 1"
