[package]
name = "android_glue_assets_example"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[package.metadata.android]
label = "Using assets android-rs-glue example"
assets = "assets"

[dependencies]
android-ndk = { git = "https://github.com/rust-windowing/android-ndk-rs" }

[dependencies.android_glue]
path = "../../glue"
